  special environments (e.g. in knitr) (Fixes #377)

* Empty data frames are now handled correctly: layers with empty data are
  dropped silently, instead of inheriting data from the plot. (Thanks to
  Winston Chang. Fixes #31, #332, #506 and #507)

* The alpha value of set colours is now preserved by default. To return to the
  old behaviour, set `alpha = 1`. (Fixes #475)

ggplot2 0.9.0
----------------------------------------------------------------

NEW FEATURES

* `annotation_custom`: a new geom intended for use as static annnotations that
  are the same in every panel. Can be used to add inset plots, tables, and
  other grid-based decorations inside the plot area (Contributed by Baptiste
  Auguié).

* `geom_map`: a new special case of `geom_polygon` useful when you are drawing
  maps, particularly choropleth maps. It is matched with `annotation_map`, an
  even faster special case when you want the same map drawn in each panel.

* `geom_raster` is a special case of `geom_tile` for equally sized rectangular
  tiles. It uses the raster functionality of R graphics devices for massively
  increased speed and much decreased file sizes. It is matched with
  `annotation_raster`, an even faster special case, for when you want to draw
  the same raster in each panel.

* `geom_violin`: an implementation of violin plots, which are a way of
  visualizing kernel density estimates. (Thanks to Winston Chang)

* `geom_dotplot`: dot plots, as described in Wilkinson (1999). To bin the
  data, it uses `stat_bindot` to bin the data, which has two methods: histodot
  and dot-density. Histodot binning uses fixed-width bins just like
  `stat_bin`, while dot-density binning uses variable-width bins. A new grob,
  `grob_dotstack` is used to render the dots. (Thanks to Winston Chang)

* New fortify methods have been added for objects produced by the `multcomp`
  package.

* `stat_summary2d` and `stat_summary_hex`. These are work like `stat_bin2d`