@@ -51,6 +51,9 @@ BUG FIXES
 * The alpha value of set colours is now preserved by default. To return to the
   old behaviour, set `alpha = 1`. (Fixes #475)
 
+* `scale_*_manual` will throw an error if you have too few values. (Fixes
+  #512)
+
 ggplot2 0.9.0
 ----------------------------------------------------------------
 
